--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <div class="chips one">
-        Everyone
+        <span>Everyone</span>
     </div>
     <div class="chips" *ngFor="let category of categories">
        <span> {{ category.name }} </span> 
