--- a/src/app/components/player/player.component.css
+++ b/src/app/components/player/player.component.css
@@ -16,8 +16,8 @@
   position: fixed;
   overflow-y: scroll;
   margin-top: 0%;
+  width: 100%;
   height: 100%;
-  width: 65%;
   left: 0;
 }
 .right {
@@ -25,17 +25,16 @@
   overflow-y: scroll;
   margin-top: 0%;
   height: 100%;
-  width: 35%;
+  width: 100%;
   right: 0;
-  margin-top: 100px;
+  margin-top: 10px;
 }
 /*End start dimensions of the various div*/
 
 /*Start left side of the player*/
 video {
-  margin-top: 100px;
-  margin-left: 2%;
-  width: 96%;
+  margin-top: 82px;
+  width: 100%;
 }
 
 .left::-webkit-scrollbar {
@@ -227,20 +226,13 @@ hr {
 
 
 @media screen and (max-width: 960px) {
-
-  .right, .left {
-   width: 100%;
-   overflow-y: hidden;
-   position: unset;
-  }
   video {
     width: 100%;
     margin-left: 0;
     margin-top: 0;
   }
-  .left {
-    margin-top: 7.5%;
-    height: 100%;
+  .right {
+    margin-top: 10px;
   }
   .like {
     margin-left: 6%;
@@ -253,12 +245,6 @@ hr {
     height: 80%;
   }
   }
-
-  @media (max-width: 880px) {
-    video {
-      margin-top: 2%;
-    }
-  } 
 
   @media (max-width: 650px) {
     .like {
