--- a/src/app/components/player/player.component.css
+++ b/src/app/components/player/player.component.css
@@ -8,24 +8,22 @@
 .row {
   width: 100%;
   height: 100%;
-  margin: 0%;
+  margin-left: 100px;
 }
 
 .left {
   overflow: hidden;
-  position: fixed;
+  position: unset;
   overflow-y: scroll;
-  margin-top: 0%;
-  width: 100%;
   height: 100%;
+  width: 65%;
   left: 0;
 }
 .right {
-  position: fixed;
+  position: unset;
   overflow-y: scroll;
-  margin-top: 0%;
   height: 100%;
-  width: 100%;
+  width: 35%;
   right: 0;
   margin-top: 10px;
 }
@@ -33,8 +31,8 @@
 
 /*Start left side of the player*/
 video {
-  margin-top: 82px;
-  width: 100%;
+  margin-left: 2%;
+  width: 96%;
 }
 
 .left::-webkit-scrollbar {
@@ -223,29 +221,16 @@ hr {
     font-size: small;
   }
 }
-
-
-@media screen and (max-width: 960px) {
-  video {
-    width: 100%;
+@media (max-width: 960px) {
+  .row {
     margin-left: 0;
-    margin-top: 0;
   }
-  .right {
-    margin-top: 10px;
-  }
-  .like {
-    margin-left: 6%;
-  }
-  .videos a,h3,span {
-    font-size: medium;
-  }
-  .video-thumbnail img {
-    width: 230px;
-    height: 80%;
-  }
-  }
-
+}
+  @media (max-width: 880px) {
+    video {
+      margin-top: 2%;
+    }
+  } 
   @media (max-width: 650px) {
     .like {
       margin-left: 3%;
