Made the player a little more responsive

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -189,6 +189,9 @@ span {
   }
 }
 @media (max-width: 425px) {
+  .videos {
+    margin-top: 160px;
+  }
   .video {
     --a : 100%;
     --b : 185%;
