--- a/src/app/components/player/player.component.css
+++ b/src/app/components/player/player.component.css
@@ -5,10 +5,11 @@
 /*Start player*/
 
 /*Start start dimensions of the various div*/
-.container {
+.box {
   margin-top: 82px;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 .left {
   overflow: hidden;
@@ -28,7 +29,7 @@
   right: 0;
   margin-top: 10px;
   margin-left: 130px;
-  padding-left: 13px;
+  padding-left: 10px;
   padding-right: 15px;
 }
 /*End start dimensions of the various div*/
@@ -36,7 +37,7 @@
 /*Start left side of the player*/
 video {
   margin-left: 2%;
-  width: 100%;
+  max-width: 85%;
 }
 
 .left::-webkit-scrollbar {
@@ -230,8 +231,9 @@ hr {
   }
 }
 @media (max-width: 960px) {
-  .left, video {
+   video {
     margin-left: 0;
+    width: 100%;
   }
   .right {
     margin-left: 10px;
