--- a/src/app/components/player/player.component.html
+++ b/src/app/components/player/player.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="box">
     <div class="left">
         <div class="current-video" *ngFor="let video of videos">
             <div class="player" *ngIf="video.id == id">
