--- a/src/app/components/player/player.component.css
+++ b/src/app/components/player/player.component.css
@@ -1,4 +1,3 @@
-
 * {
   box-sizing: border-box;
 }
@@ -19,7 +18,7 @@
   height: 100%;
   width: 100%;
   left: 0;
-  margin-left: 110px;
+  margin-left: 100px;
 }
 .right {
   overflow: hidden;
@@ -30,15 +29,16 @@
   right: 0;
   margin-top: 10px;
   margin-left: 130px;
-  padding-left: 10px;
-  padding-right: 15px;
+  padding-left: 12px;
+  padding-right: 17px;
 }
 /*End start dimensions of the various div*/
 
 /*Start left side of the player*/
 video {
-  margin-left: 2%;
-  width: 95%;
+  padding-top: 15px;
+  margin-left: 6%;
+  width: 80%;
 }
 
 .left::-webkit-scrollbar {
@@ -232,15 +232,19 @@ hr {
   }
 }
 @media (max-width: 960px) {
-   video {
+  video {
     width: 100%;
     margin-left: 0px;
+    padding-top: 0px;
   }
   .left {
     margin-left: 0;
   }
   .right {
     margin-left: 10px;
+  }
+  .description {
+    padding: 0 8px 0 8px;
   }
 }
 @media (max-width: 650px) {
