--- a/src/app/components/player/player.component.css
+++ b/src/app/components/player/player.component.css
@@ -246,6 +246,9 @@ hr {
   .description {
     padding: 0 8px 0 8px;
   }
+  .box {
+    margin-top: 69px;
+  }
 }
 @media (max-width: 650px) {
   .like {
@@ -268,7 +271,7 @@ hr {
   }
 }
 
-@media (max-width: 430px) {
+@media (max-width: 425px) {
   .report {
     margin-left: 15%;
   }
@@ -287,6 +290,9 @@ hr {
   }
   .video-container {
     height: 95%;
+  }
+  .box {
+    margin-top: 54px;
   }
 }
 @media (max-width: 380px) {
